--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,17 +1,19 @@
 $black: #1b1b1b;
 $gray: #746565;
+$lightgray: #cfd8dc;
 $white: white;
 
 $pinkred: #e40044;
 $orange: #ff5410;
 
-$yellow: #fbff22;
+$yellow: #ffeb30;
 $greenyellow: #b3ff00;
 
 $green: #00db00;
 $darkgreen: #1ea51e;
-$bluegreen: #00d8a2;
+$bluegreen: #00e360;
 
+$lightblue: #2196f5;
 $blue: #2255ff;
 $darkblue: blue;
 $purple: #8c00ff;
