--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,11 @@
           box-sizing: border-box;
 }
 
+* {
+  -webkit-transition: color 1s linear, background-color 1s linear, border-color 1s linear;
+  transition: color 1s linear, background-color 1s linear, border-color 1s linear;
+}
+
 body {
   padding: 0%;
   margin: 0%;
@@ -27,7 +32,29 @@ ul.theme-list li.theme {
   height: 25px;
   margin: 5px 7px;
   border-radius: 20px;
+  cursor: pointer;
   background-color: white;
+  border: 2px solid white;
+}
+
+ul.theme-list li.theme[data-theme="theme-default"] {
+  background-color: #e40044;
+}
+
+ul.theme-list li.theme[data-theme="theme-dark"] {
+  background-color: #1b1b1b;
+}
+
+ul.theme-list li.theme[data-theme="theme-yellow"] {
+  background-color: #ffeb30;
+}
+
+ul.theme-list li.theme[data-theme="theme-blue"] {
+  background-color: #2255ff;
+}
+
+ul.theme-list li.theme[data-theme="theme-green"] {
+  background-color: #00db00;
 }
 
 .post-masonary-header hr {
@@ -61,7 +88,7 @@ ul.theme-list li.theme {
   text-align: left;
   background: transparent;
   outline: none;
-  border: 2px solid #00d8a2;
+  border: 2px solid #00e360;
   border-radius: 1rem !important;
   overflow: hidden;
   max-width: -webkit-max-content;
