--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,13 @@
 @import 'reset';
 @import 'variables';
 
+* {
+    transition: color 1s linear, background-color 1s linear, border-color 1s linear;
+}
+
 body {
     padding: 0%;
-    margin: 0%;
+    margin: 0%;    
 }
 
 :is(.header) > * {
@@ -21,7 +25,25 @@ ul.theme-list {
         height: 25px;
         margin: 5px 7px;
         border-radius: 20px;
+        cursor: pointer;
         background-color: $white;
+        border: 2px solid $white; 
+    }
+
+    li.theme[data-theme="theme-default"] {
+        background-color: $pinkred;
+    }
+    li.theme[data-theme="theme-dark"] {
+        background-color: $black;
+    }
+    li.theme[data-theme="theme-yellow"] {
+        background-color: $yellow;
+    }
+    li.theme[data-theme="theme-blue"] {
+        background-color: $blue;
+    }
+    li.theme[data-theme="theme-green"] {
+        background-color: $green;
     }
 }
 
