--- a/src/styles/theme-blue.scss
+++ b/src/styles/theme-blue.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-$colorVarient1 : $pinkred;
+$colorVarient1 : $blue;
 $colorVarient2 : $white;
 $colorVarient3 : $black;
 $colorVarient4 : $lightgray;
