--- a/src/css/theme-green.css
+++ b/src/css/theme-green.css
@@ -1,6 +1,28 @@
+/***************************************************
+ *                                                 *
+ *  Copyright 2022 ag-sanjjeev                     *
+ *                                                 *
+ *  The source code is licensed under MIT-style    *
+ *  License. The usage, permission and condition   *
+ *  are applicable to this source code as per      *
+ *  license. That can be found in LICENSE file or  *
+ *  at https://opensource.org/licenses/MIT.        *
+ *                                                 *
+ **************************************************/
+/***************************************************
+ *                                                 *
+ *  Copyright 2022 ag-sanjjeev                     *
+ *                                                 *
+ *  The source code is licensed under MIT-style    *
+ *  License. The usage, permission and condition   *
+ *  are applicable to this source code as per      *
+ *  license. That can be found in LICENSE file or  *
+ *  at https://opensource.org/licenses/MIT.        *
+ *                                                 *
+ **************************************************/
 body {
-  background-color: #1ea51e;
-  color: #1ea51e;
+  background-color: #00db00;
+  color: #00db00;
 }
 
 .header .fa-home {
@@ -25,11 +47,11 @@ body {
 }
 
 .search-box-container .fa-search {
-  color: #1ea51e;
+  color: #00db00;
 }
 
 .post-masonary {
-  background-color: #1ea51e;
+  background-color: #00db00;
   color: #1b1b1b;
 }
 
@@ -68,11 +90,11 @@ footer a.footer-link {
 }
 
 .post-container .post-heading {
-  color: #1ea51e;
+  color: #00db00;
 }
 
 .post-container small {
-  color: #1ea51e;
+  color: #00db00;
 }
 
 .post-container .post-body {
@@ -81,19 +103,19 @@ footer a.footer-link {
 }
 
 .post-container .post-categories p {
-  color: #1ea51e;
+  color: #00db00;
 }
 
 .fa-share {
-  color: #1ea51e;
+  color: #00db00;
 }
 
 .post-share {
-  border-color: #1ea51e;
+  border-color: #00db00;
 }
 
 .post-share .btn-text {
-  color: #1ea51e;
+  color: #00db00;
 }
 
 hr {
@@ -101,7 +123,7 @@ hr {
 }
 
 .badge.rounded-pill {
-  background-color: #1ea51e;
+  background-color: #00db00;
   color: white;
 }
 /*# sourceMappingURL=theme-green.css.map */
