--- a/src/styles/theme-default.scss
+++ b/src/styles/theme-default.scss
@@ -1,3 +1,15 @@
+/***************************************************
+ *                                                 *
+ *  Copyright 2022 ag-sanjjeev                     *
+ *                                                 *
+ *  The source code is licensed under MIT-style    *
+ *  License. The usage, permission and condition   *
+ *  are applicable to this source code as per      *
+ *  license. That can be found in LICENSE file or  *
+ *  at https://opensource.org/licenses/MIT.        *
+ *                                                 *
+ **************************************************/
+
 @import 'variables';
 
 $colorVarient1 : $pinkred;
