--- a/src/styles/theme-green.scss
+++ b/src/styles/theme-green.scss
@@ -1,6 +1,18 @@
+/***************************************************
+ *                                                 *
+ *  Copyright 2022 ag-sanjjeev                     *
+ *                                                 *
+ *  The source code is licensed under MIT-style    *
+ *  License. The usage, permission and condition   *
+ *  are applicable to this source code as per      *
+ *  license. That can be found in LICENSE file or  *
+ *  at https://opensource.org/licenses/MIT.        *
+ *                                                 *
+ **************************************************/
+
 @import 'variables';
 
-$colorVarient1 : $lightgreen;
+$colorVarient1 : $green;
 $colorVarient2 : $white;
 $colorVarient3 : $black;
 $colorVarient4 : $lightgray;
